--- a/netlify.toml
+++ b/netlify.toml
@@ -4,6 +4,4 @@
 
 [functions]
   node_bundler = "esbuild"
-
-[functions."scheduled-post"]
-  schedule = "@hourly"
+  directory = "netlify/functions"
